# OpenXcom

./: .gitignore  CMakeLists.txt  Makefile.am  restate.md
docs/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.mxe  OpenXcom.2010.vcxproj  OpenXcom.2010.vcxproj.filters  OpenXcomEx.rc  OpenXcomEx.s  main.cpp  pch.h
src/Basescape/: BaseInfoState.cpp  BaseView.cpp  BasescapeState.cpp  BuildFacilitiesState.cpp  ChangeHeadquartersState.cpp  CraftArmorState.cpp  CraftEquipmentLoadState.cpp  CraftEquipmentSaveState.cpp  CraftEquipmentState.cpp  CraftInfoState.cpp  CraftPilotSelectState.cpp  CraftPilotsState.cpp  CraftSoldiersState.cpp  CraftWeaponsState.cpp  CraftsState.cpp  DismantleFacilityState.cpp  GlobalManufactureState.cpp  GlobalResearchState.cpp  ManageAlienContainmentState.cpp  ManufactureDependenciesTreeState.cpp  ManufactureInfoState.cpp  ManufactureStartState.cpp  ManufactureState.cpp  MiniBaseView.cpp  MonthlyCostsState.cpp  NewManufactureListState.cpp  NewResearchListState.cpp  PlaceFacilityState.cpp  PlaceLiftState.cpp  PurchaseState.cpp  ResearchInfoState.cpp  ResearchState.cpp  SackSoldierState.cpp  SellState.cpp  SoldierArmorState.cpp  SoldierAvatarState.cpp  SoldierBonusState.cpp  SoldierDiaryMissionState.cpp  SoldierDiaryOverviewState.cpp  SoldierDiaryPerformanceState.cpp  (+12 more)
src/Battlescape/: AbortMissionState.cpp  ActionMenuItem.cpp  ActionMenuItem.h  ActionMenuState.cpp  ActionMenuState.h  AlienInventory.cpp  AlienInventoryState.cpp  AliensCrashState.cpp  BattlescapeState.cpp  BattlescapeState.h  BriefingLightState.cpp  BriefingState.cpp  Camera.cpp  CannotReequipState.cpp  CommendationLateState.cpp  CommendationState.cpp  ConfirmEndMissionState.cpp  DebriefingState.cpp  InfoboxOKState.cpp  InfoboxState.cpp  Inventory.cpp  Inventory.h  InventoryLoadState.cpp  InventoryPersonalState.cpp  InventorySaveState.cpp  InventoryState.cpp  InventoryState.h  Map.cpp  MedikitState.cpp  MedikitView.cpp  MiniMapState.cpp  MiniMapView.cpp  NextTurnState.cpp  NextTurnState.h  PrimeGrenadeState.cpp  PromotionsState.cpp  ScannerState.cpp  SkillMenuState.cpp  SkillMenuState.h  TurnDiaryState.cpp  (+1 more)
src/Engine/: Action.cpp  Action.h  AdlibMusic.cpp  CatFile.cpp  CrossPlatform.cpp  CrossPlatform.h  FileMap.cpp  FileMap.h  FlcPlayer.cpp  FlcPlayer.h  GL2Renderer.cpp  GL2Renderer.h  GMCat.cpp  Game.cpp  Game.h  InteractiveSurface.cpp  InteractiveSurface.h  Music.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  Options.cpp  Options.h  Options.inc.h  Renderer.cpp  Renderer.h  SDLRenderer.cpp  SDLRenderer.h  Screen.cpp  Screen.h  SoundSet.cpp  State.cpp  State.h  Surface.cpp  Surface.h  Unicode.cpp  Unicode.h  Zoom.cpp
src/Geoscape/: AlienBaseState.cpp  AllocatePsiTrainingState.cpp  AllocateTrainingState.cpp  BaseDefenseState.cpp  BaseDestroyedState.cpp  BaseNameState.cpp  BuildNewBaseState.cpp  BuildNewBaseState.h  ConfirmCydoniaState.cpp  ConfirmDestinationState.cpp  ConfirmLandingState.cpp  ConfirmNewBaseState.cpp  CraftErrorState.cpp  CraftNotEnoughPilotsState.cpp  CraftPatrolState.cpp  DogfightErrorState.cpp  DogfightExperienceState.cpp  DogfightState.cpp  DogfightState.h  FundingState.cpp  GeoscapeCraftState.cpp  GeoscapeEventState.cpp  GeoscapeState.cpp  GeoscapeState.h  Globe.cpp  Globe.h  GraphsState.cpp  InterceptState.cpp  ItemsArrivingState.cpp  LowFuelState.cpp  MissionDetectedState.cpp  MonthlyReportState.cpp  MultipleTargetsState.cpp  NewPossibleCraftState.cpp  NewPossibleFacilityState.cpp  NewPossibleManufactureState.cpp  NewPossiblePurchaseState.cpp  NewPossibleResearchState.cpp  ProductionCompleteState.cpp  PsiTrainingState.cpp  (+11 more)
src/Interface/: ArrowButton.cpp  BattlescapeButton.cpp  BattlescapeButton.h  ComboBox.cpp  ComboBox.h  Cursor.cpp  Cursor.h  FpsCounter.cpp  ImageButton.cpp  MouseButton.cpp  MouseButton.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  TextButton.cpp  TextButton.h  TextEdit.cpp  TextList.cpp  TextList.h  ToggleTextButton.cpp
src/Menu/: AbandonGameState.cpp  ConfirmLoadState.cpp  CutsceneState.cpp  DeleteGameState.cpp  ErrorMessageState.cpp  ListGamesState.cpp  ListLoadOriginalState.cpp  ListLoadState.cpp  ListSaveState.cpp  LoadGameState.cpp  MainMenuState.cpp  MainMenuState.h  NewBattleState.cpp  NewGameState.cpp  OptionsAdvancedState.cpp  OptionsAudioState.cpp  OptionsBaseState.cpp  OptionsBaseState.h  OptionsBattlescapeState.cpp  OptionsBattlescapeState.h  OptionsConfirmState.cpp  OptionsControlsState.cpp  OptionsControlsState.h  OptionsDefaultsState.cpp  OptionsFoldersState.cpp  OptionsGeoscapeState.cpp  OptionsGeoscapeState.h  OptionsInformExtendedState.cpp  OptionsModsState.cpp  OptionsNoAudioState.cpp  OptionsSystemState.cpp  OptionsVideoState.cpp  OptionsVideoState.h  PauseState.cpp  SaveGameState.cpp  SetWindowedRootState.cpp  SlideshowState.cpp  SlideshowState.h  StartState.cpp  StatisticsState.cpp  (+4 more)
src/Mod/: AlienRace.cpp  Mod.cpp  Mod.h  RuleInterface.cpp  RuleInterface.h
src/Python/: adapter.cpp  adapter.h  build.py  embedding_init_code.py  module.h
src/Savegame/: SavedGame.cpp
src/Ufopaedia/: ArticleStateArmor.cpp  ArticleStateBaseFacility.cpp  ArticleStateCraft.cpp  ArticleStateCraftWeapon.cpp  ArticleStateItem.cpp  ArticleStateTFTD.cpp  ArticleStateTFTDArmor.cpp  ArticleStateTFTDCraft.cpp  ArticleStateTFTDCraftWeapon.cpp  ArticleStateTFTDFacility.cpp  ArticleStateTFTDItem.cpp  ArticleStateTFTDUso.cpp  ArticleStateTFTDVehicle.cpp  ArticleStateText.cpp  ArticleStateTextImage.cpp  ArticleStateUfo.cpp  ArticleStateVehicle.cpp  StatsForNerdsState.cpp  UfopaediaSelectState.cpp  UfopaediaStartState.cpp
